@@ -25,6 +25,7 @@ Changelog
  * Fix: Documents created by a user are no longer deleted when the user is deleted
  * Fix: Fixed a crash in `RedirectMiddleware` when a middleware class before `SiteMiddleware` returns a response (Josh Schneier)
  * Fix: Fixed error retrieving the moderator list on pages that are covered by multiple moderator permission records (Matt Fozard)
+ * Fix: Ordering pages in the explorer by reverse 'last updated' time now puts pages with no revisions at the top
 
 1.3.1 (05.01.2016)
 ~~~~~~~~~~~~~~~~~~
